# project-2-ai-system-ronan-and-kelvin-s-epic-marketplace

./: .gitignore  AGENTS.md  Epic_Marketplace_Presentation.pptx  MODULE4_QUALITY_RANKER_REPORT.md  Module_3_Presentation.pptx  PRESENTATION.md  PROPOSAL.md  README.md  checkpoint_1_elegance_report.md  checkpoint_1_module_report.md  checkpoint_1_progression_report.md  checkpoint_2_elegance_report.md  checkpoint_2_module_report.md  checkpoint_3_elegance_report.md  checkpoint_3_module_report.md  checkpoint_4_elegance_report.md  checkpoint_4_module_report.md  checkpoint_5_elegance_report.md  checkpoint_5_module_report.md  checkpoint_preparation.md  demo_full_pipeline.py  demo_output.py  full_project_elegance_report.md  full_project_module_report.md  pyproject.toml  requirements.txt
api/: __init__.py  main.py
datasets/: esci_subset_10k.parquet
integration_tests/module1/: __init__.py  test_module1_integration.py
integration_tests/module2/: __init__.py  conftest.py  test_module2_integration.py
integration_tests/module3/: conftest.py  test_module3_integration.py
integration_tests/module4/: __init__.py  conftest.py  test_module4_integration.py
integration_tests/module5/: conftest.py  test_module5_integration.py
scripts/: benchmark_ltr_models.py  build_esci_subset.py  build_presentation.py  build_working_set_200k.py  run_module5_eval.py
src/: __init__.py
src/data/: __init__.py  working_set_builder.py
src/module1/: __init__.py  catalog.py  exceptions.py  filters.py  loader.py  retrieval.py  simple_search.py
web/: package-lock.json  package.json
web/src/: api.ts  (+3 more)
(+86 files in other folders)
