[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "epic-marketplace"
version = "0.1.0"
description = "Small business marketplace search with NLP and supervised ranking"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Kelvin Bonsu"},
    {name = "Ronan"},
]

dependencies = [
    "pandas",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["unit_tests", "integration_tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
